feat: added IMU data

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@synchroni/synchroni_sdk_react_native",
   "version": "0.1.0",
-  "description": "xxx",
+  "description": "Synchroni sdk for react native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/src/index.d.ts",
