fix: android keep scan & data optimize & disable auto reconnect

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
-      "react-native-synchronisdk": ["./src/index"]
+      "@synchroni/synchroni_sdk_react_native": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
