--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SynchroniSI/Synchroni_SDK_React_Native"
+    "url": "git+https://github.com/SynchroniSI/Synchroni_SDK_React_Native.git"
   },
   "author": "ycq <yecq_82@hotmail.com> (https://github.com/yecq)",
   "license": "MIT",
